--- a/backend/AccessHub.API/appsettings.json
+++ b/backend/AccessHub.API/appsettings.json
@@ -1,9 +1,14 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=accesshub.db"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "AllowedHosts": "*"
 }
